k8s/apps/internal/reactive-resume/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: react-resume
  labels:
    name: react-resume
