k8s/apps/internal/reactive-resume/chrome-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-chrome
  namespace: react-resume
spec:
  selector:
    app: headless-chrome
  ports:
    - port: 3000
      targetPort: 3000
